ms_kiersten/ms_kiersten/static/ms_kiersten/css/ms_kiersten.css
.pacifico-regular {
    font-family: "Pacifico", cursive;
    font-weight: 400;
    font-style: normal;
}

:root {
    --purple-color: #C297FF;
    --yellow-color: #fff7a5;
    --orange-color: #be4600;
    --handwriting-color: #0c0029;
    --copyright-color: #472e69;
    --offwhite-color: rgb(255, 255, 235);

    --breakpoint-med: 600px;
    --breakpoint-lg: 1200px;

    --drop-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

body {
    background-color: var(--purple-color);
}

.fullpage {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    min-height: 98vh;
}

p, h1 {
    margin: 0;
    font-family: 'Ubuntu Condensed', sans-serif;
}

p {
    font-size: 15.5pt;
}

a {
    color: var(--orange-color);
    font-weight: 600;
    text-decoration: none;
}

ul, ol {
    list-style-type: none;
}

.main_grid {
    width: 100%;
    display: grid;
    grid-template-columns: 40% 60%;
    grid-template-rows: auto auto 35vh auto;
    row-gap: .5rem;

    grid-template-areas:
        "nametag nametag"
        "tagline tagline"
        "hero_sticker links"
        "content content";
}

@media (min-width: 800px) {
    .main_grid {
        grid-template-columns: 20% 50% 30%;

        grid-template-areas: "nametag nametag nametag"
            "na tagline poop"
            "hero_sticker content links";
    }
}

@media (min-width: 1200px) {
    body {
        display: flex;
        justify-content: space-around;
    }

    .main_grid {
        max-width: 1400px;
        grid-template-columns: 20% 10% 40% 30%;
        grid-template-rows: auto 20vh 35vh auto;

        grid-template-areas: "spacer nametag nametag na"
            "hero_sticker tagline tagline na"
            "hero_sticker content content links"
    }
}

.name_tag {
    grid-area: nametag;
    display: flex;
    flex-direction: row;
    justify-content: center;
    rotate: 1deg;
}

.name_tag img {
    /* min-width: 380px; */
    /* min-height: 300px; */
    /* height: 100%; */
    width: 100%;
    max-width: 450px;
    justify-self: center;
    grid-area: 1/1/4/2;
}

.name_tag p {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 2rem;
    color: white;
    text-wrap: nowrap;

    grid-area: 1/1/2/2;
    margin-top: .9em;

}

.name_tag p span {
    font-weight: bold;
    text-transform: uppercase;
}

.name_tag h1 {
    font-size: 3rem;
    color: var(--handwriting-color);
    text-wrap: nowrap;

    grid-area: 2/1/3/2;
}

.introduction {
    grid-area: tagline;
    color: var(--orange-color);
    background-color: var(--yellow-color);
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
    width: 80%;
    min-width: 15em;
    max-width: 30em;
    max-height: auto;
    padding: .5em;
    font-size: medium;
    rotate: -1deg;
}

.introduction a {
    color: var(--orange-color);
    font-weight: 600;
    text-decoration: underline dotted 2px;
    text-underline-offset: 2px;
}

@media (min-width: 800px) {
    .introduction {
        justify-self: center;
        margin-right: 3em;
        width: 60%;
    }
}

.nav_links {
    grid-area: links;
    margin-inline-start: 1em;
}

.nav_links ul {
    list-style-type: none;

    display: grid;
    grid-template-columns: 1fr 4fr 1fr;
    grid-template-rows: auto;
    row-gap: 1em;
    padding-left: 0;
}

.nav_links li {
    background-color: var(--yellow-color);
    color: var(--orange-color);
    height: 3em;

    box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.2);


    z-index: 10;

    min-width: fit-content;
    max-width: 250px;
    text-wrap: nowrap;

    padding-inline-end: .5em;
}

.nav_links a {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    min-height: 32px;

    text-align: center;
}

.nav_links box-icon {
    padding: .2em;
    align-self: center;
    fill: var(--orange-color)
}

.nav_links i {
    padding: .2em;
    width: 36px;
    height: 32px;
}

.nav_links ul li:nth-child(odd) {
    grid-column: 2/4;
}

.nav_links ul li:nth-child(even) {
    grid-column: 1/3;
}

.hero_image {
    z-index: 1;

    width: 80vw;
    max-width: fit-content;
    min-width: 200px;
    grid-area: hero_sticker;
    justify-self: end;
    position: relative;
    top: 10px;
    right: -100px;
    rotate: 10deg;
}

@media (min-width: 800px) {
    .hero_image {
        width: 35vw;
        right: -110px;
        top: -30px;
    }
}

.content-box {
    grid-area: content;
    background-color: var(--offwhite-color);

    z-index: 10;
    width: 90%;
    height: 100%;
    justify-self: end;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

.content {
    padding: 1em .5em 1em;
}

.content img {
    box-sizing: border-box;
    max-width: 100%;
    margin-block: .5em;
}

div.photos {
    margin-top: 1em;
    width: 90%;
    z-index: 10;
    --photo-max-dimension: 50vh;
    --photo-rel-dimension: 80vw;

    display: grid;
    gap: 1em;
    justify-items: center;
}

@media (min-width: 800px) {
    div.photos {
        grid-template-columns: auto auto;
    }
}

h2 {
    z-index: 10;
    font-family: 'Ubuntu Condensed';
    font-size: 30pt;
    color: var(--orange-color);
    background-color: var(--yellow-color);
    padding: .5rem;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

.photos img {
    background-color: white;
    box-sizing: border-box;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

.photos img:nth-child(odd) {
    margin-left: 3em;
}

.photos img:nth-child(even) {
    margin-right: 3em;
}

.photos img:nth-child(3n+1) {
    rotate: 1deg;
    /* justify-self: right; */
}

.photos img:nth-child(3n+2) {
    rotate: -1deg;
    /* justify-self: left; */
}

.photos img:nth-child(3n+3) {
    rotate: 4deg;
}

img.landscape {
    width: var(--photo-rel-dimension);
    max-width: var(--photo-max-dimension);
    padding-block: 3%;
    padding-inline-start: 3%;
    padding-inline-end: 10%;
    align-self: center;
}

img.portrait {
    height: var(--photo-rel-dimension);
    max-height: var(--photo-max-dimension);
    padding-inline: 3%;
    padding-block-start: 3%;
    padding-block-end: 10%;
}

footer {
    align-self: end;
    color: var(--copyright-color);
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin-top: 1em;
}

.contentpage {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 98vh;
    
}

.contentpage .content-box {
    margin-top: .5em;
}

img.album-art {
    max-width: 85vw;
    background-color: var(--offwhite-color);
    padding: 1em;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
    height: auto;    
    aspect-ratio: auto;
    box-sizing: border-box;
}

h3 {
    z-index: 10;
    font-family: 'Ubuntu Condensed', serif;
    font-size: 25pt;
    color: var(--orange-color);
    background-color: var(--yellow-color);
    padding: .5rem 2rem;
    margin: .5em;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

@media (min-width: 800px) {
    img.album-art {
        max-width: 600px;
    }
}

.contentpage ol {
    padding-left: 0;
    width: 90%;
}

.blogheadline {
    background-color: var(--offwhite-color);
    padding: 1rem;
}

.postblock {
    display: grid;
    grid-template-rows: auto auto auto;
    grid-template-columns: auto 30vw;
    grid-template-areas: 
        ". image"
        "title image"
        "summary summary";

    margin-block: 1em;
}

.postblock h3 {
    background-color: transparent;
    box-shadow: none;
    padding: 0;
    margin: 0;
}

.postblock .blockbg {
    background-color: var(--yellow-color);
    grid-area: 2/1 / 4/3;
    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

.postinfo {
    grid-area: title;
    padding: .5em 1em;
}

.postblock img {
    justify-self: center;
    grid-area: image;
    width: 85%;
    height: auto;
    aspect-ratio: 1/1;

    margin-inline-end: 1em;
    
    border-style: solid;
    border-width: .5em;
    border-color: var(--offwhite-color);

    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
}

ol.postlist li:nth-child(odd) img {
    rotate: 2deg;
}

ol.postlist li:nth-child(even) img {
    rotate: -2deg;
}

.postsummary {
    grid-area: summary;
    padding: .5em 1em;
}

@media (min-width: 800px) {

    .postblock {
        grid-template-rows: auto auto auto auto;
        margin-block: -1em;
    }

    .blogheadline {
        margin-block-end: 1rem;
    }

    .postblock .blockbg {
        background-color: var(--yellow-color);
        grid-area: 2/1 / 4/2;
        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
    }

    ol.postlist li:nth-child(odd) .blockbg {
        grid-area: 2/1 / 4/2;
    }

    ol.postlist li:nth-child(even) .blockbg {
        grid-area: 2/2 / 4/3;
    }

    ol.postlist li:nth-child(odd) .postblock{
        grid-template-columns: auto 30vw;
        grid-template-areas: 
            ". image"
            "title image"
            "summary image"
            ". image";
    }

    ol.postlist li:nth-child(even) .postblock{
        grid-template-columns: 30vw auto;
        grid-template-areas: 
        "image ."
        "image title"
        "image summary"
        "image .";
    }

    ol.postlist li:nth-child(even) img {
        margin-inline: 1em 0;
    }

}

.postimage {
    max-width: 100%;
    height: auto;
    aspect-ratio: auto;
    background-color: var(--offwhite-color);
    padding: 1em;
    box-sizing: border-box;
    box-shadow: var(--drop-shadow);
}

div.postheader {
    background-color: var(--yellow-color);
    color: var(--orange-color);
    margin-block: .5em 1em;
    padding: .5em;
    padding-inline-end: 1em;
    rotate: -1deg;
    box-shadow: var(--drop-shadow);
}

article.postcontent {
    background-color: var(--offwhite-color);
    box-sizing: border-box;
    padding: .5em;
    width: 100%;
}

article.postcontent img {
    max-width: 100%;
    height: auto;
    aspect-ratio: auto;
}

